map cards consistency enhancements

--- a/react/assets/forus-webshop/scss/_common/components/_map-card.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_map-card.scss
@@ -1,36 +1,71 @@
 .map-card {
-    position: relative;
-    min-height: 125px;
+    --office-card-media-size: 120px;
+    --office-card-padding: 15px;
+
+    border-radius: var(--border-radius);
+    box-shadow: 2px 2px 15px rgba($color: #000000, $alpha: 0.05);
+    max-width: 100%;
+    margin: 0 auto;
     display: flex;
+    flex-direction: row;
+    position: relative;
+    background: #ffffff;
+    z-index: 1;
+    gap: var(--office-card-padding);
+    word-break: break-word;
 
     .map-card-img {
         display: flex;
-        width: 125px;
-        flex: 0 0 125px;
+        flex: 0 0 var(--office-card-media-size);
+        border-top-left-radius: var(--border-radius);
+        border-bottom-left-radius: var(--border-radius);
+        background-size: cover;
+        background-position: 50% 50%;
+        padding: var(--office-card-padding);
+        padding-right: 0;
+        align-items: flex-start;
 
         img {
             width: 100%;
-            height: 100%;
             display: block;
-            object-fit: cover;
+            border-radius: var(--border-radius);
         }
     }
 
     .map-card-content {
-        padding: 10px 15px;
+        display: flex;
+        padding: 12.5px 25px 12.5px 0;
+        flex-direction: column;
+        min-width: 0;
+        gap: 7.5px;
+        flex: 1 1 auto;
 
         .map-card-title {
+            font: 700 14px/20px var(--base-font);
             color: #282b39;
-            font: 700 14px/16px var(--base-font);
-            margin: 0 0 5px;
-            padding-right: 20px;
         }
-        
+
         .map-card-description {
             color: #131418;
-            font: 400 11px/14px var(--base-font);
-            margin: 0 0 5px;
-    
+            font: 500 11px/20px var(--base-font);
+            display: flex;
+            min-width: 0;
+            gap: 0;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            word-break: break-word;
+            align-items: flex-start;
+
+            .map-card-description-row {
+                display: flex;
+                flex-direction: row;
+                gap: 5px;
+            }
+
+            strong {
+                white-space: nowrap;
+            }
+
             a {
                 font: inherit;
                 color: var(--bc);
@@ -38,22 +73,28 @@
         }
 
         .map-card-button {
-            font: 700 11px/15px var(--base-font);
-            display: inline-flex;
+            font: 700 11px/18px var(--base-font);
+            display: flex;
             flex-direction: row;
-            justify-content: center;
+            justify-content: flex-start;
             cursor: pointer;
             color: var(--tc);
-            transition: color .4s;
+            transition: color 0.4s;
+            width: fit-content;
+            align-items: center;
+            gap: 5px;
 
             .mdi {
-                line-height: 15px;
+                line-height: 18px;
                 font-size: 14px;
-                vertical-align: middle;
-                margin-left: 2px;
+                height: 18px;
                 color: var(--color-primary);
                 transform: translate(0, 1px);
-                transition: transform .4s;
+                transition: transform 0.4s;
+
+                &:before {
+                    display: flex;
+                }
             }
 
             &:hover {
@@ -72,10 +113,27 @@
             min-width: 100px;
             max-width: 100px;
         }
+
+        .map-card-content {
+            .map-card-description {
+                font: 500 11px/18px var(--base-font);
+
+                .map-card-description-row {
+                    flex-direction: column;
+                    gap: 0;
+
+                    strong {
+                        font-weight: 700;
+                    }
+                }
+            }
+        }
     }
 }
 
 .gm-style {
+    z-index: 3 !important;
+
     .gm-style-iw-chr {
         position: absolute;
         display: flex;
@@ -83,15 +141,33 @@
         right: 0;
         z-index: 5;
         padding: 2px;
+
+        .gm-ui-hover-effect {
+            width: 37px !important;
+            height: 37px !important;
+            outline-offset: -2px !important;
+            border-radius: var(--border-radius);
+
+            span {
+                margin: 0 !important;
+                position: absolute !important;
+                top: 6px !important;
+                right: 6px !important;
+                width: 25px !important;
+                height: 25px !important;
+            }
+        }
     }
 
     .gm-style-iw-c {
         padding: 0;
-        max-width: 360px !important;
+        width: 440px !important;
+        max-width: calc(100vw - 40px) !important;
     }
 
     .gm-style-iw-d {
         overflow: auto !important;
+        max-height: initial !important;
         @include webkit_scrollbar();
     }
 }
