update map cards colors

--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-map-office-card.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-map-office-card.scss
@@ -74,7 +74,7 @@
                 min-width: 0;
                 white-space: normal;
                 font: inherit;
-                color: var(--color-primary);
+                color: #282b39;
             }
         }
     }
