--- a/react/assets/forus-webshop/scss/_common/includes/common.scss
+++ b/react/assets/forus-webshop/scss/_common/includes/common.scss
@@ -100,6 +100,10 @@ img {
     text-decoration: line-through;
 }
 
+.text-underline {
+    text-decoration: underline;
+}
+
 .text-muted {
     color: var(--tc-muted) !important;
 }
