--- a/react/assets/forus-webshop/scss/_common/layout/_footer.scss
+++ b/react/assets/forus-webshop/scss/_common/layout/_footer.scss
@@ -382,7 +382,9 @@
                 text-align: center;
 
                 .footer-nav-item {
-                    font: 400 13px/20px var(--base-font);
+                    a {
+                        font: 400 14px/22px var(--base-font);
+                    }
                 }
             }
         }
