--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-mobile-menu.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-mobile-menu.scss
@@ -11,6 +11,7 @@ $footer_base_font: 'Open Sans', arial, sans-serif;
     transition: transform 0.2s;
     background: #fff;
     box-shadow: 0px -1px 0px 0px #E5E5E5 inset;
+    border-top: 1px solid var(--border-color);
     overflow: auto;
 
     .mobile-menu-group {
