--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-navbar-search.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-navbar-search.scss
@@ -338,10 +338,6 @@
                 top: -6px;
                 left: 10px;
             }
-
-            &.search-form-found {
-                height: 100vh;
-            }
         }
 
         .search-area {
@@ -365,9 +361,12 @@
             flex-direction: column;
             flex-grow: 1;
             position: initial;
-            width: 100%;
             max-height: initial;
             box-shadow: none;
+            margin-left: -15px;
+            margin-right: -15px;
+            width: 100vw;
+            overflow: initial;
 
             .search-result-sidebar {
                 display: flex;
@@ -409,7 +408,8 @@
             .search-result-content {
                 display: flex;
                 flex-direction: column;
-                flex-grow: 1;
+                padding-top: 15px;
+                overflow: initial;
 
                 .search-result-section {
                     margin-bottom: 10px;
@@ -469,6 +469,7 @@
                         padding: 20px;
                         width: 100%;
                         bottom: 50px;
+                        margin-bottom: -15px;
 
                         .button {
                             padding: 8px 15px;
