update vergoedingen auth button font weight

--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-navbar-desktop.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-navbar-desktop.scss
@@ -346,6 +346,12 @@
             }
         }
 
+        .navbar-desktop-user-buttons {
+            .button {
+                font-weight: 600;
+            }
+        }
+
         .navbar-desktop-menu {
             justify-content: right;
         }
