Epic: deepl milestone 3

--- a/react/assets/forus-platform/scss/_common/includes/common.scss
+++ b/react/assets/forus-platform/scss/_common/includes/common.scss
@@ -200,9 +200,13 @@ img {
     font-weight: 700 !important;
 }
 
+.text-semibold {
+    font-weight: 600 !important;
+}
+
 .text-medium,
 .text-strong-half {
-    font-weight: 600 !important;
+    font-weight: 500 !important;
 }
 
 .text-wrap {
