--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-lang-control.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-lang-control.scss
@@ -35,6 +35,7 @@
             background: #fff;
             border: 1px solid var(--border-color);
             border-radius: var(--border-radius);
+            box-shadow: var(--box-shadow);
             z-index: 2;
             width: 230px;
             max-width: 90vw;
