--- a/react/assets/forus-platform/scss/_common/blocks/block-announcements.scss
+++ b/react/assets/forus-platform/scss/_common/blocks/block-announcements.scss
@@ -1,6 +1,9 @@
 &.block-announcements {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
     .announcement {
-        margin-bottom: 20px;
         position: relative;
         opacity: 1;
         transition: opacity 0.4s;
@@ -10,19 +13,19 @@
 
         .announcement-wrapper {
             background: #ffffff;
-            padding: 15px 20px;
+            padding: 12px 15px;
             border-radius: calc(var(--border-radius));
             margin-left: -3.5px;
         }
 
         .title {
-            font: 600 13px/16px var(--base-font);
+            font: 600 14px/20px var(--base-font);
             color: #151b26;
-            margin-bottom: 7px;
+            margin-bottom: 6px;
         }
 
         .description {
-            font: 500 11px/16px var(--base-font);
+            font: 500 12px/18px var(--base-font);
             color: #646f79;
 
             .block.block-markdown {
@@ -30,6 +33,8 @@
                 color: inherit;
 
                 p {
+                    margin-bottom: 6px;
+
                     &:last-child {
                         margin-bottom: 0;
                     }
