--- a/react/assets/forus-webshop/scss/_common/components/_form.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_form.scss
@@ -1165,8 +1165,8 @@
 
     &.form-compact {
         .form-label {
-            font: 700 11px/26px var(--base-font);
-            margin: 0 0 0;
+            font: 700 11px/16px var(--base-font);
+            margin: 0 0 5px;
         }
 
         datepicker,
