--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -134,6 +134,7 @@
 @import '_common/sections/blocks/block-payouts';
 @import '_common/sections/blocks/block-cookie-banner';
 @import '_common/sections/blocks/block-lang-control';
+@import '_common/sections/blocks/block-reservation-address';
 
 @import '_common/modals/modal-file-preview';
 @import '_common/modals/modal-photo-cropper';
