--- a/react/assets/forus-platform/scss/_common/select-controls/select-control-organizations.scss
+++ b/react/assets/forus-platform/scss/_common/select-controls/select-control-organizations.scss
@@ -16,7 +16,7 @@
 
         .select-control-logo {
             display: block;
-            padding: calc(calc(var(--control-height) - var(--control-line-height)) / 2);
+            padding: calc(calc(calc(var(--control-height) - 2px) - var(--control-line-height)) / 2);
             padding-left: 10px;
             padding-right: 6px;
             width: 40px;
@@ -84,14 +84,18 @@
             .select-control-search-clear {
                 float: left;
                 width: 35px;
-                padding-right: 10px;
+                padding-right: 8px;
+                padding-left: 8px;
                 text-align: right;
                 position: absolute;
-                right: 0;
-                top: 0;
+                right: 2px;
+                top: 2px;
 
                 .mdi {
                     font-size: 20px;
+                    line-height: 20px;
+                    width: 20px;
+                    height: 20px;
                 }
 
                 &[disabled],
@@ -237,6 +241,18 @@
                                 font: normal normal normal 16px/1 'Material Design Icons';
                             }
                         }
+                    }
+                }
+
+                .select-control-option-no-results {
+                    font: 500 13px / 20px var(--base-font);
+                    color: #646f79;
+
+                    .select-control-option-value {
+                        font-weight: 500;
+                        font-size: 12px;
+                        line-height: calc(var(--control-option-height) - 10px);
+                        padding: 5px 15px;
                     }
                 }
             }
