--- a/react/assets/forus-platform/scss/_common/select-controls/select-control-organizations.scss
+++ b/react/assets/forus-platform/scss/_common/select-controls/select-control-organizations.scss
@@ -83,13 +83,16 @@
 
             .select-control-search-clear {
                 float: left;
-                width: 35px;
-                padding-right: 8px;
-                padding-left: 8px;
+                width: 30px;
                 text-align: right;
                 position: absolute;
-                right: 2px;
-                top: 2px;
+                right: 7px;
+                top: 9px;
+                bottom: 9px;
+                padding: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
 
                 .mdi {
                     font-size: 20px;
