add reservation custom field type boolean

--- a/react/assets/forus-webshop/scss/_common/components/_form.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_form.scss
@@ -1084,6 +1084,14 @@
             &.has-info-btn {
                 .form-control:not([type='radio']):not([type='checkbox']) {
                     padding-right: 45px;
+
+                    &.select-control {
+                        .select-control-input {
+                            .select-control-icon {
+                                right: 45px;
+                            }
+                        }
+                    }
                 }
             }
         }
